--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -131,12 +131,8 @@
 {% endif %}
 
 <div class="d-flex justify-content-between align-items-center mt-4">
-    <a href="{{ path('user_index') }}" class="btn btn-outline-secondary px-4 py-2">
-        <i class="fas fa-arrow-left me-2"></i>Cancel
-    </a>
-    
     <button type="submit" class="btn btn-primary px-4 py-2">
-        <i class="fas fa-save me-2"></i>{{ button_label|default('Save User') }}
+        {{ button_label|default('Save User') }}
     </button>
 </div>
 
